[package]
name = "tcp-tunnel"
version = "0.1.0"
edition = "2021"
authors = ["Abdürrahim YILMAZ <ayilmaz@ayilmaz.xyz>"]

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
chacha20 = "0.9.1"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.20"
