[package]
name = "veloxid"
version = "1.0.0"
edition = "2021"
authors = ["Abdürrahim YILMAZ <ayilmaz@ayilmaz.xyz>"]
description = "Fast, secure and flexible network tunneling tool"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
chacha20 = "0.9.1"
dashmap = "6.1.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.20"
